<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.candice_feng.training.Lesson5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/hw7_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hw7_1_btn_text" />

        <Button
            android:id="@+id/hw7_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hw7_2_btn_text" />

        <Button
            android:id="@+id/hw8_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hw8_3_btn_text" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
