<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.candice_feng.training.Lesson4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/hw4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hw4_1_btn_text" />

        <Button
            android:id="@+id/hw4_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hw4_2_btn_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hw4_3_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/donut_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/donut_circle"
                android:onClick="orderDonut" />

            <ImageView
                android:id="@+id/froyo_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/froyo_circle"
                android:onClick="orderFroyo" />

            <ImageView
                android:id="@+id/iceCream_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/icecream_circle"
                android:onClick="orderIcecream" />
        </LinearLayout>

        <Button
            android:id="@+id/hw4_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hw4_4_btn_text" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
