<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.candice_feng.training.Lesson2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp">

            <TextView
                android:id="@+id/phoneTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/launch_phone"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/launch_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:text="0988565169" />

            <TextView
                android:id="@+id/intentTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/launch_intent" />

            <Button
                android:id="@+id/intentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/launch_camera" />

            <TextView
                android:id="@+id/activityTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/launch_activity" />

            <EditText
                android:id="@+id/number1"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/number2"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/sumBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="4"
                android:text="@string/sum" />

            <TextView
                android:id="@+id/launch_phone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:text="0988565169" />
        </GridLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
